[package]
name = "pilot-reports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"]  }
tokio = { version = "1", features = ["full"]  }
serde = { version = "1.0", features = ["derive"]  }
serde_json = "1.0"
csv = "^1.1"
dotenv = "0.14"
chrono = "0.4"
oauth2 = "4.1"
url = "^2.2"
yup-oauth2 = "^6.2"
tempdir = "^0.3"
tempfile = "^3.3"
pyo3 = "0.15.1"
