[package]
name = "pilot-reports"
authors = ["Harvey Bates <harvey.bates@dpi.nsw.gov.au>"]
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"]  }
tokio = { version = "1", features = ["full"]  }
serde = { version = "1.0", features = ["derive"]  }
clap = { version = "3.1.0", features = ["derive"] }
serde_json = "1.0"
csv = "^1.1"
dotenv = "0.14"
chrono = "0.4"
url = "^2.2"
log = "0.4"
log4rs = "1"
polars = "0.19.1"
